--- a/tips.html
+++ b/tips.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>电池健康¹⁶·帮助提示</title>
+		<title>帮助提示</title>
 	</head>
 	<style type="text/css">
 		       a:link {
