--- a/tips.html
+++ b/tips.html
@@ -40,7 +40,7 @@
 			</div>
 			<br>
 			<br>
-			<h1>致谢</h1>
+			<h1>特别感谢</h1>
 			<p>在此请允许我再次感谢<a href="https://space.bilibili.com/16422613">夕眺舞伊</a>提供的容量信息和理论支持。</p>
 			<p>这里是他的<a href="https://m.tb.cn/h.5dwIhGl">淘宝店铺</a>。</p>
 			<hr>
@@ -82,6 +82,16 @@
 				<li><h2>关于电池年龄</h2></li>
 				<p>电池年龄是以电池连接到主板上的日期开始计算的，所以这个时间在一般情况下大于您使用设备的时间，若您的设备没有更换过电池，则此数据从设备的生产日期开始计算；若您的设备更换过电池（不包括移植电芯的情况），则此数据从更换新电池的日期开始计算。</p>
                 <br>
+			</ul>
+			<hr>
+			<h1>贡献名单</h1>
+			<ul type="circle">
+				<li><p>夕眺舞伊（哔哩哔哩）：2017~2021发布的iPhone（iPhone 8～iPhone 13 Pro Max）所有机型的电池容量</p></li>
+				<li><p>Smile of a Mac（我自己）：iPhone SE 3、iPhone 14 Pro、iPhone 12 mini、iPad Pro 2020 11-inch的容量</p></li>
+				<li><p>我是小兔崽汁（哔哩哔哩）：iPad 8的电池容量</p></li>
+				<li><p>你请输入新的昵称呢（哔哩哔哩）：iPad mini 6的电池容量</p></li>
+				<li><p>你不要乱来好不好（哔哩哔哩）：iPhone 15 Pro Max的电池容量</p></li>
+				<li><p>不看也会爆炸（酷安）：iPhone 15 Pro的电池容量</p></li>
 			</ul>
 			<hr>
 			<center><p>Copyright© Smile of a Mac 2023</p></center>
