--- a/tips.html
+++ b/tips.html
@@ -87,14 +87,15 @@
 			<h1>贡献名单</h1>
 			<ul type="circle">
 				<li><p>夕眺舞伊（哔哩哔哩）：2017~2021发布的iPhone（iPhone 8～iPhone 13 Pro Max）所有机型的电池容量</p></li>
-				<li><p>Smile of a Mac（我自己）：iPhone SE 3、iPhone 14 Pro、iPhone 12 mini、iPad Pro 2020 11-inch的容量</p></li>
+				<li><p>Smile of a Mac：iPhone SE 3、iPhone 14 Pro、iPhone 12 mini、iPad Pro 2020 11-inch的容量</p></li>
 				<li><p>我是小兔崽汁（哔哩哔哩）：iPad 8的电池容量</p></li>
 				<li><p>你请输入新的昵称呢（哔哩哔哩）：iPad mini 6的电池容量</p></li>
 				<li><p>你不要乱来好不好（哔哩哔哩）：iPhone 15 Pro Max的电池容量</p></li>
 				<li><p>不看也会爆炸（酷安）：iPhone 15 Pro的电池容量</p></li>
+				<li><p>eason12345（酷安）：iPad Pro 2022 11-inch的电池容量</p></li>
 			</ul>
 			<hr>
-			<center><p>Copyright© Smile of a Mac 2023</p></center>
+			<center><p>Copyright© Smile of a Mac 2023-2024</p></center>
 		</div>
 	</body>
 </html>
