--- a/tips.html
+++ b/tips.html
@@ -19,6 +19,7 @@
 		            color: lightgreen;
 		            text-decoration: none;
 		        }
+		/* @@@ */
 		.page{
 			width: 960px;
 			margin: 0 auto;
@@ -34,68 +35,71 @@
 		}
 	</style>
 	<body>
-		<div class="page">
-			<div class="topbar">
-				<h1 style="color: white;font-size: 40px;">&ensp;电池健康¹⁶·帮助提示</h1>
-			</div>
-			<br>
-			<br>
-			<h1>特别感谢</h1>
-			<p>在此请允许我再次感谢<a href="https://space.bilibili.com/16422613">夕眺舞伊</a>提供的容量信息和理论支持。</p>
-			<p>这里是他的<a href="https://m.tb.cn/h.5dwIhGl">淘宝店铺</a>。</p>
-			<hr>
-			<h1>教程</h1>
-			<center><h2>1.完整视频教程</h2></center>
-			<center>
-			<p>由于“快捷指令”app的限制，暂未发现在预览网页中使用b站外链播放器的方法，您可以点击<a href="https://www.bilibili.com/video/BV1Jd4y1c7Pv/?vd_source=c8adce0c12e9139d93e445dc47816b4d">此处</a>来观看教程。</p>
-			</center>
-			<br>
-			<br>
-			<center><h2>2.完整图片教程</h2></center>
-			<center><p><img src="https://s2.loli.net/2023/08/07/kacq3Yd14BA8CyF.jpg"
-			width="960"
-			height="3479"/>
-			</p></center>
-			<hr>
-			<h1>常见问题</h1>
-			<ul type="square">
-				<li><h2>找不到Analytics文件</h2></li>
-				<p>1.检查共享iPhone（或iPad）分析选项是否打开，若没有打开请打开。</p>
-				<p>2.如果打开了此选项依然搜索不到目标文件，请尝试还原所有设置并重新打开此选项，第二天上午8:00左右重新查询即可。</p>
-				<br>
-				<li><h2>无法获取数据，请检查传入的文件是否正确</h2></li>
-				<p>1.您可能传入了错误的文件，检查您共享的文件是否正确。</p>
-				<br>
-				<li><h2>共享菜单中选择捷径后没有结果，主菜单仍然显示</h2></li>
-				<p>1.此问题为iOS 16.0.x系统bug，您需要重新打开设置app，一定要上划关闭后台，然后重试。</p>
-				<br>
-				<li><h2>Beta版系统分析文件体积大可能导致运行超时的问题</h2></li>
-				<p>属于正常现象，目前暂无解决方案，但iOS 17 Beta似乎没有这个问题。</p>
-				<br>
-				<li><h2>分析文件缺失关键数据</h2></li>
-				<p>如果您在生成文件时间的过去24小时中没有充电，则分析文件中将不会保存实时电池数据。</p>
-				<br>
-				<li><h2>关于捷径计算</h2></li>
-				<p>捷径计算的结果基于昨天08:00至今天08:00共24小时中记录的电池数据得出，与系统计算电池容量的算法有所不同，这些数据可能会受到环境气温、充电时间、充电设备的影响，故数值可能会出现浮动，属正常现象。
-⚠️捷径数据中存储的各个机型的电池容量与设备电池硬件上标定的电池容量有所不同，原因是iOS并不以硬件上的容量计算电池效率。</p>
-				<br>
-				<li><h2>关于电池年龄</h2></li>
-				<p>电池年龄是以电池连接到主板上的日期开始计算的，所以这个时间在一般情况下大于您使用设备的时间，若您的设备没有更换过电池，则此数据从设备的生产日期开始计算；若您的设备更换过电池（不包括移植电芯的情况），则此数据从更换新电池的日期开始计算。</p>
-                <br>
-			</ul>
-			<hr>
-			<h1>贡献名单</h1>
-			<ul type="circle">
-				<li><p>夕眺舞伊（哔哩哔哩）：2017~2021发布的iPhone（iPhone 8～iPhone 13 Pro Max）所有机型的电池容量</p></li>
-				<li><p>Smile of a Mac：iPhone SE 3、iPhone 14 Pro、iPhone 12 mini、iPad Pro 2020 11-inch的容量</p></li>
-				<li><p>我是小兔崽汁（哔哩哔哩）：iPad 8的电池容量</p></li>
-				<li><p>你请输入新的昵称呢（哔哩哔哩）：iPad mini 6的电池容量</p></li>
-				<li><p>你不要乱来好不好（哔哩哔哩）：iPhone 15 Pro Max的电池容量</p></li>
-				<li><p>不看也会爆炸（酷安）：iPhone 15 Pro的电池容量</p></li>
-				<li><p>eason12345（酷安）：iPad Pro 2022 11-inch的电池容量</p></li>
-			</ul>
-			<hr>
-			<center><p>Copyright© Smile of a Mac 2023-2024</p></center>
+		<div id="background">
+			<div class="page">
+						<div class="topbar">
+							<h1 style="color: white;font-size: 40px;">&ensp;电池健康¹⁶·帮助提示</h1>
+						</div>
+						<br>
+						<br>
+						<h1>特别感谢</h1>
+						<p>在此请允许我再次感谢<a href="https://space.bilibili.com/16422613">夕眺舞伊</a>提供的容量信息和理论支持。</p>
+						<p>这里是他的<a href="https://m.tb.cn/h.5yMKdqaT5bvZWzX">淘宝店铺</a>。</p>
+						<hr>
+						<h1>教程</h1>
+						<center><h2>1.完整视频教程</h2></center>
+						<center>
+						<p>由于“快捷指令”app的限制，暂未发现在预览网页中使用b站外链播放器的方法，您可以点击<a href="https://www.bilibili.com/video/BV1Jd4y1c7Pv/?vd_source=c8adce0c12e9139d93e445dc47816b4d" style="font-size: 24px;">此处</a>来观看教程。</p>
+						</center>
+						<br>
+						<br>
+						<center><h2>2.完整图片教程</h2></center>
+						<center><p><img src="https://s2.loli.net/2023/08/07/kacq3Yd14BA8CyF.jpg"
+						width="960"
+						height="3479"/>
+						</p></center>
+						<hr>
+						<h1>常见问题</h1>
+						<ul type="square">
+							<li><h2>找不到Analytics文件</h2></li>
+							<p>1.检查共享iPhone（或iPad）分析选项是否打开，若没有打开请打开。</p>
+							<p>2.如果打开了此选项依然搜索不到目标文件，请尝试还原所有设置并重新打开此选项，第二天上午8:00左右重新查询即可。</p>
+							<br>
+							<li><h2>无法获取数据，请检查传入的文件是否正确</h2></li>
+							<p>1.您可能传入了错误的文件，检查您共享的文件是否正确。</p>
+							<br>
+							<li><h2>共享菜单中选择捷径后没有结果，主菜单仍然显示</h2></li>
+							<p>1.此问题为iOS 16.0.x系统bug，您需要重新打开设置app，一定要上划关闭后台，然后重试。</p>
+							<br>
+							<li><h2>Beta版系统分析文件体积大可能导致运行超时的问题</h2></li>
+							<p>属于正常现象，目前暂无解决方案，但iOS 17 Beta似乎没有这个问题。</p>
+							<br>
+							<li><h2>分析文件缺失关键数据</h2></li>
+							<p>如果您在生成文件时间的过去24小时中没有充电，则分析文件中将不会保存实时电池数据。</p>
+							<br>
+							<li><h2>关于捷径计算</h2></li>
+							<p>捷径计算的结果基于昨天08:00至今天08:00共24小时中记录的电池数据得出，与系统计算电池容量的算法有所不同，这些数据可能会受到环境气温、充电时间、充电设备的影响，故数值可能会出现浮动，属正常现象。
+			⚠️捷径数据中存储的各个机型的电池容量与设备电池硬件上标定的电池容量有所不同，原因是iOS并不以硬件上的容量计算电池效率。</p>
+							<br>
+							<li><h2>关于总工作时间</h2></li>
+							<p>总工作时间是以电池连接到主板上的日期开始计算的，所以这个时间在一般情况下大于您使用设备的时间，若您的设备没有更换过电池，则此数据从设备的生产日期开始计算；若您的设备更换过电池（不包括移植电芯的情况），则此数据从更换新电池的日期开始计算。</p>
+			                <br>
+						</ul>
+						<hr>
+						<h1>贡献名单</h1>
+						<ul type="circle">
+							<li><p>夕眺舞伊（哔哩哔哩）：2017~2021发布的iPhone（iPhone 8～iPhone 13 Pro Max）所有机型的电池容量</p></li>
+							<li><p>Smile of a Mac：iPhone SE 3、iPhone 14 Pro、iPhone 12 mini、iPad Pro 2020 11-inch的容量</p></li>
+							<li><p>我是小兔崽汁（哔哩哔哩）：iPad 8的电池容量</p></li>
+							<li><p>你请输入新的昵称呢（哔哩哔哩）：iPad mini 6的电池容量</p></li>
+							<li><p>你不要乱来好不好（哔哩哔哩）：iPhone 15 Pro Max的电池容量</p></li>
+							<li><p>不看也会爆炸（酷安）：iPhone 15 Pro的电池容量</p></li>
+							<li><p>eason12345（酷安）：iPad Pro 2022 11-inch的电池容量</p></li>
+							<li><p>世辉耀（酷安）：为2.3.2版本的历史记录添加了复制功能</p></li>
+						</ul>
+						<hr>
+						<center><p>Copyright© Smile of a Mac 2023-2024</p></center>
+					</div>
 		</div>
 	</body>
 </html>
