--- a/tips.html
+++ b/tips.html
@@ -47,17 +47,12 @@
 						<p>这里是他的<a href="https://m.tb.cn/h.5yMKdqaT5bvZWzX">淘宝店铺</a>。</p>
 						<hr>
 						<h1>教程</h1>
-						<center><h2>1.完整视频教程</h2></center>
+						<center><h2>完整视频教程</h2></center>
 						<center>
 						<p>由于“快捷指令”app的限制，暂未发现在预览网页中使用b站外链播放器的方法，您可以点击<a href="https://www.bilibili.com/video/BV1Jd4y1c7Pv/?vd_source=c8adce0c12e9139d93e445dc47816b4d" style="font-size: 24px;">此处</a>来观看教程。</p>
 						</center>
 						<br>
 						<br>
-						<center><h2>2.完整图片教程</h2></center>
-						<center><p><img src="https://s2.loli.net/2023/08/07/kacq3Yd14BA8CyF.jpg"
-						width="960"
-						height="3479"/>
-						</p></center>
 						<hr>
 						<h1>常见问题</h1>
 						<ul type="square">
