--- a/tips.html
+++ b/tips.html
@@ -34,8 +34,7 @@
 			font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 		}
 	</style>
-	<body>
-		<div id="background">
+	<body id="background">
 			<div class="page">
 						<div class="topbar">
 							<h1 style="color: white;font-size: 40px;">&ensp;电池健康¹⁶·帮助提示</h1>
@@ -95,6 +94,5 @@
 						<hr>
 						<center><p>Copyright© Smile of a Mac 2023-2024</p></center>
 					</div>
-		</div>
 	</body>
 </html>
