--- a/tips.html
+++ b/tips.html
@@ -5,20 +5,6 @@
 		<title>帮助提示</title>
 	</head>
 	<style type="text/css">
-		       a:link {
-		            color: darkgreen;
-		            text-decoration: none;
-		        }
-		
-		        a:visited {
-		            color: darkgreen;
-		            text-decoration: none;
-		        }
-		
-		        a:hover {
-		            color: lightgreen;
-		            text-decoration: none;
-		        }
 		/* @@@ */
 		.page{
 			width: 960px;
@@ -46,9 +32,9 @@
 						<p>这里是他的<a href="https://m.tb.cn/h.5yMKdqaT5bvZWzX">淘宝店铺</a>。</p>
 						<hr>
 						<h1>教程</h1>
-						<center><h2>完整视频教程</h2></center>
+						<center><h2><a href="https://www.bilibili.com/video/BV1Jd4y1c7Pv/?vd_source=c8adce0c12e9139d93e445dc47816b4d">完整视频教程</a></h2></center>
 						<center>
-						<p>由于“快捷指令”app的限制，暂未发现在预览网页中使用b站外链播放器的方法，您可以点击<a href="https://www.bilibili.com/video/BV1Jd4y1c7Pv/?vd_source=c8adce0c12e9139d93e445dc47816b4d" style="font-size: 24px;">此处</a>来观看教程。</p>
+						<p>由于“快捷指令”app的限制，暂未发现在预览网页中使用b站外链播放器的方法，您可以点击标题来观看教程。</p>
 						</center>
 						<br>
 						<br>
