--- a/tips.html
+++ b/tips.html
@@ -86,7 +86,7 @@
 											<p>在对电池容量进行研究和测试时，满充容量也是一个关键指标。在某些电池的测试中，发现存在满充容量参数设置错误导致剩余容量显示错误的情况，通过调整设计容量和满充容量等操作，使电池的相关数据如 SOC（剩余容量/满充容量）、COH（健康度）等恢复正常，满充容量的准确设置对于电池性能监测和使用具有重要意义。</p>
 										</ul>
 										<hr>
-										<p>作者声明：该部分内容来自互联网，由于作者并非电池方面的专业人士，无法考察其真实性，仅供参考。如有错误请通过酷安联系作者进行订正。</p>
+										<p>作者声明：该部分内容来自互联网，由于作者并非电池领域的专业人士，无法考察其真实性，仅供参考。如有错误请通过酷安联系作者进行订正。</p>
 						</div>
 						<br>
 						<div id="float_container">
@@ -100,6 +100,8 @@
 								<li><p>不看也会爆炸（酷安）：iPhone 15 Pro的电池容量</p></li>
 								<li><p>eason12345（酷安）：iPad Pro 2022 11-inch的电池容量</p></li>
 								<li><p>世辉耀（酷安）：为2.3.2版本的历史记录添加了复制功能</p></li>
+								<li><p>黑夜丶（酷安）：iPhone 16 Pro的电池容量</p></li>
+								<li><p>铁盒的序已变成了日記（酷安）：iPhone 16 Pro Max的电池容量</p></li>
 							</ul>
 						</div>
 						<center><p>Copyright© Smile of a Mac 2022-2025</p></center>
