--- a/tips.html
+++ b/tips.html
@@ -102,6 +102,7 @@
 								<li><p>世辉耀（酷安）：为2.3.2版本的历史记录添加了复制功能</p></li>
 								<li><p>黑夜丶（酷安）：iPhone 16 Pro的电池容量</p></li>
 								<li><p>铁盒的序已变成了日記（酷安）：iPhone 16 Pro Max的电池容量</p></li>
+								<li><p>寻南觅北（酷安）：iPad mini (A17 Pro)的电池容量</p></li>
 							</ul>
 						</div>
 						<center><p>Copyright© Smile of a Mac 2022-2025</p></center>
