--- a/tipsV2.html
+++ b/tipsV2.html
@@ -62,7 +62,7 @@
             <ul style="list-style: none; padding-top: 12px;">
                 <!-- 问题1 -->
                 <li style="padding: 12px 0;">
-                    <h2 style="font-weight: 500; color: #1d1d1f; font-size: 16px;">找不到Analytics文件</h2>
+                    <h2 class="label">找不到Analytics文件</h2>
                     <p style="color: #86868b; padding: 8px 0 16px; line-height: 1.6;">
                         1.检查共享iPhone（或iPad）分析选项是否打开，若没有打开请打开。<br>
                         2.如果打开了此选项依然搜索不到目标文件，请尝试还原所有设置并重新打开此选项，第二天上午8:00左右重新查询即可。
@@ -72,7 +72,7 @@
 
                 <!-- 问题2 -->
                 <li style="padding: 12px 0;">
-                    <h2 style="font-weight: 500; color: #1d1d1f; font-size: 16px;">无法获取数据，请检查传入的文件是否正确</h2>
+                    <h2 class="label">无法获取数据，请检查传入的文件是否正确</h2>
                     <p style="color: #86868b; padding: 8px 0 16px; line-height: 1.6;">
                         1.您可能传入了错误的文件，检查您共享的文件是否正确。
                     </p>
@@ -81,7 +81,7 @@
 
                 <!-- 问题3 -->
                 <li style="padding: 12px 0;">
-                    <h2 style="font-weight: 500; color: #1d1d1f; font-size: 16px;">共享菜单中选择捷径后没有结果</h2>
+                    <h2 class="label">共享菜单中选择捷径后没有结果</h2>
                     <p style="color: #86868b; padding: 8px 0 16px; line-height: 1.6;">
                         1.此问题为iOS/iPadOS 16.0.x系统bug，后续系统版本仍可能出现，您需要重新打开设置app，一定要上划关闭后台，然后重试。
                     </p>
@@ -90,7 +90,7 @@
 
                 <!-- 问题4 -->
                 <li style="padding: 12px 0;">
-                    <h2 style="font-weight: 500; color: #1d1d1f; font-size: 16px;">Beta版系统分析文件体积大导致运行超时</h2>
+                    <h2 class="label">Beta版系统分析文件体积大导致运行超时</h2>
                     <p style="color: #86868b; padding: 8px 0 16px; line-height: 1.6;">
                         属于正常现象，目前暂无解决方案，您可以通过重新启动设备来尝试缓解此问题。
                     </p>
@@ -99,7 +99,7 @@
 
                 <!-- 问题5 -->
                 <li style="padding: 12px 0;">
-                    <h2 style="font-weight: 500; color: #1d1d1f; font-size: 16px;">分析文件缺失关键数据</h2>
+                    <h2 class="label">分析文件缺失关键数据</h2>
                     <p style="color: #86868b; padding: 8px 0 16px; line-height: 1.6;">
                         如果您在生成文件时间的过去24小时中没有充电（也有可能为系统工作不正常），则分析文件中将不会保存实时电池数据。
                     </p>
@@ -108,7 +108,7 @@
 
                 <!-- 问题6 -->
                 <li style="padding: 12px 0;">
-                    <h2 style="font-weight: 500; color: #1d1d1f; font-size: 16px;">关于捷径计算</h2>
+                    <h2 class="label">关于捷径计算</h2>
                     <p style="color: #86868b; padding: 8px 0 16px; line-height: 1.6;">
                         捷径计算的结果基于昨天08:00至今天08:00共24小时中记录的电池数据得出，与系统计算电池容量的算法有所不同...<br>
                         ⚠️捷径数据中存储的各个机型的电池容量与设备电池硬件上标定的电池容量有所不同...
@@ -118,7 +118,7 @@
 
                 <!-- 问题7 -->
                 <li style="padding: 12px 0;">
-                    <h2 style="font-weight: 500; color: #1d1d1f; font-size: 16px;">关于总工作时间</h2>
+                    <h2 class="label">关于总工作时间</h2>
                     <p style="color: #86868b; padding: 8px 0 16px; line-height: 1.6;">
                         总工作时间是以电池连接到主板上的日期开始计算的...若您的设备更换过电池（不包括移植电芯的情况）...
                     </p>
@@ -135,7 +135,7 @@
             <ul style="list-style: none; padding-top: 12px;">
                 <!-- Qmax容量 -->
                 <li style="padding: 12px 0;">
-                    <h2 style="font-weight: 500; color: #1d1d1f; font-size: 16px;">Qmax容量</h2>
+                    <h2 class="label">Qmax容量</h2>
                     <p style="color: #86868b; line-height: 1.6; padding: 8px 0;">
                         Qmax是指预估电芯最大的化学容量。保护板会定期更新Qmax数值...<br>
                         在iPhone 13及以上机型中，当电池循环次数大于一千次或几百次且效率低于82%时会二次降压...
@@ -145,7 +145,7 @@
 
                 <!-- 满充容量 -->
                 <li style="padding: 12px 0;">
-                    <h2 style="font-weight: 500; color: #1d1d1f; font-size: 16px;">满充容量</h2>
+                    <h2 class="label">满充容量</h2>
                     <p style="color: #86868b; line-height: 1.6; padding: 8px 0;">
                         满充容量是指电池在充满电状态下能够实际储存并可被设备使用的电量数值...<br>
                         在对电池容量进行研究和测试时，发现存在满充容量参数设置错误导致剩余容量显示错误的情况...
