--- a/tipsV2.html
+++ b/tipsV2.html
@@ -248,7 +248,9 @@
                 <li class="issue-item">
                     <h3 class="subsection-title">找不到Analytics文件</h3>
                     <p class="text-muted">
-                        1.检查共享iPhone（或iPad）分析选项是否打开，若没有打开请打开。<br>
+                        1.检查共享iPhone（或iPad）分析选项是否打开，若没有打开请打开。
+                    </p>
+                    <p class="text-muted">
                         2.如果打开了此选项依然搜索不到目标文件，请尝试还原所有设置并重新打开此选项，第二天上午8:00左右重新查询即可。
                     </p>
                 </li>
