--- a/tipsV2.html
+++ b/tipsV2.html
@@ -21,7 +21,6 @@
             :root {
                 /* 深色模式变量 */
                 --bg-color: #121212;
-                ;
                 --text-primary: #fff;
                 --text-secondary: #b2b2b6;
                 --card-bg: #222222;
@@ -59,9 +58,8 @@
 
         .section-title {
             font-size: 20px;
-            text-align: center;
-            padding: 12px 0;
-            margin: 0;
+            text-align: left;
+            /* padding: 12px 0; */
         }
 
         .subsection-title {
@@ -175,7 +173,7 @@
 
         <!-- 教程模块 -->
         <section class="card">
-            <h2 class="subsection-title">教程</h2>
+            <h2 class="section-title">教程</h2>
             <hr class="divider">
             <div>
                 <div style="text-align: center;">
@@ -192,7 +190,7 @@
 
         <!-- 常见问题 -->
         <section class="card">
-            <h2 class="subsection-title">常见问题</h2>
+            <h2 class="section-title">常见问题</h2>
             <hr class="divider">
             <ul class="issue-list">
                 <!-- 问题1 -->
@@ -256,7 +254,7 @@
         
         <!-- 数据说明 -->
         <section class="card">
-            <h2 class="subsection-title">数据说明</h2>
+            <h2 class="section-title">数据说明</h2>
             <hr class="divider">
             <ul class="issue-list">
                 <!-- Qmax容量 -->
@@ -291,7 +289,7 @@
 
         <!-- 特别感谢 -->
         <section class="card">
-            <h2 class="subsection-title">特别感谢</h2>
+            <h2 class="section-title">特别感谢</h2>
             <hr class="divider">
             <p class="text-muted">
                 在此请允许我再次感谢
@@ -306,7 +304,7 @@
 
         <!-- 贡献名单 -->
         <section class="card">
-            <h2 class="subsection-title">贡献名单</h2>
+            <h2 class="section-title">贡献名单</h2>
             <hr class="divider">
             <ul class="contributor-list">
                 <li class="text-muted">夕眺舞伊（哔哩哔哩）：2017~2021发布的iPhone（iPhone 8～iPhone 13 Pro Max）所有机型的电池容量</li>
