--- a/tipsV2.html
+++ b/tipsV2.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>电池健康Verge·教程答疑</title>
+    <title>电池健康Verge·教程帮助</title>
     <style>
         :root {
             /* 浅色模式变量 */
@@ -168,7 +168,7 @@
     <!-- 原有HTML内容保持不变 -->
     <div class="container">
         <!-- 主标题 -->
-        <h1 class="section-title" style="text-align: left; font-size: 48px;">教程答疑</h1>
+        <h1 class="section-title" style="text-align: left; font-size: 48px;">教程帮助</h1>
         <br>
 
         <!-- 教程模块 -->
@@ -308,8 +308,6 @@
             <hr class="divider">
             <ul class="contributor-list">
                 <li class="text-muted">夕眺舞伊（哔哩哔哩）：2017~2021发布的iPhone（iPhone 8～iPhone 13 Pro Max）所有机型的电池容量</li>
-                <li class="text-muted">Smile of a Mac：iPhone SE 3、iPhone 14 Pro、iPhone 12 mini、iPad Pro 2020 11-inch的容量
-                </li>
                 <li class="text-muted">我是小兔崽汁（哔哩哔哩）：iPad 8的电池容量</li>
                 <li class="text-muted">你请输入新的昵称呢（哔哩哔哩）：iPad mini 6的电池容量</li>
                 <li class="text-muted">你不要乱来好不好（哔哩哔哩）：iPhone 15 Pro Max的电池容量</li>
