--- a/tipsV2.html
+++ b/tipsV2.html
@@ -188,6 +188,14 @@
             </div>
         </section>
 
+        <section class="card">
+            <h2 class="section-title">特别提醒</h2>
+            <hr class="divider">
+            <p class="text-muted">
+                ⚠️注意：5.4版本不支持之前旧版本的数据库，请各位用户务必更新到“数据库(29)”或更新版本使用，如果您的网络状况不理想，您可以前往：“偏好设置”-“重新部署数据库”来部署新的数据库
+            </p>
+        </section>
+
         <!-- 常见问题 -->
         <section class="card">
             <h2 class="section-title">常见问题</h2>
