--- a/tipsV2.html
+++ b/tipsV2.html
@@ -288,6 +288,8 @@
                 <li class="text-muted">铁盒的序已变成了日記（酷安）：iPhone 16 Pro Max的电池容量</li>
                 <li class="text-muted">寻南觅北（酷安）：iPad mini (A17 Pro)的电池容量</li>
                 <li class="text-muted">骑上我心爱的小托托（酷安）：iPhone 16的电池容量</li>
+                <li class="text-muted">三两老友（酷安）：iPhone 17的电池容量</li>
+                <li class="text-muted">流忍似火（酷安）：iPhone 17 Pro Max的电池容量</li>
             </ul>
         </section>
 
