--- a/tipsV2.html
+++ b/tipsV2.html
@@ -290,6 +290,7 @@
                 <li class="text-muted">骑上我心爱的小托托（酷安）：iPhone 16的电池容量</li>
                 <li class="text-muted">三两老友（酷安）：iPhone 17的电池容量</li>
                 <li class="text-muted">流忍似火（酷安）：iPhone 17 Pro Max的电池容量</li>
+                <li class="text-muted">一只咕咕酱（酷安）：iPhone Air的电池容量</li>
             </ul>
         </section>
 
