--- a/tipsV2.html
+++ b/tipsV2.html
@@ -277,20 +277,22 @@
             <h2 class="section-title">贡献名单</h2>
             <hr class="divider">
             <ul class="contributor-list">
-                <li class="text-muted">夕眺舞伊（哔哩哔哩）：2017~2021发布的iPhone（iPhone 8～iPhone 13 Pro Max）所有机型的电池容量</li>
-                <li class="text-muted">我是小兔崽汁（哔哩哔哩）：iPad 8的电池容量</li>
-                <li class="text-muted">你请输入新的昵称呢（哔哩哔哩）：iPad mini 6的电池容量</li>
-                <li class="text-muted">你不要乱来好不好（哔哩哔哩）：iPhone 15 Pro Max的电池容量</li>
-                <li class="text-muted">不看也会爆炸（酷安）：iPhone 15 Pro的电池容量</li>
-                <li class="text-muted">eason12345（酷安）：iPad Pro 2022 11-inch的电池容量</li>
+                <li class="text-muted">夕眺舞伊（哔哩哔哩）：2017~2021发布的iPhone（iPhone 8～iPhone 13 Pro Max）所有机型的电池容量信息</li>
+                <li class="text-muted">我是小兔崽汁（哔哩哔哩）：iPad 8的电池容量信息</li>
+                <li class="text-muted">你请输入新的昵称呢（哔哩哔哩）：iPad mini 6的电池容量信息</li>
+                <li class="text-muted">你不要乱来好不好（哔哩哔哩）：iPhone 15 Pro Max的电池容量信息</li>
+                <li class="text-muted">不看也会爆炸（酷安）：iPhone 15 Pro的电池容量信息</li>
+                <li class="text-muted">eason12345（酷安）：iPad Pro 2022 11-inch的电池容量信息</li>
                 <li class="text-muted">世辉耀（酷安）：为2.3.2版本的历史记录添加了复制功能</li>
-                <li class="text-muted">黑夜丶（酷安）：iPhone 16 Pro的电池容量</li>
-                <li class="text-muted">铁盒的序已变成了日記（酷安）：iPhone 16 Pro Max的电池容量</li>
-                <li class="text-muted">寻南觅北（酷安）：iPad mini (A17 Pro)的电池容量</li>
-                <li class="text-muted">骑上我心爱的小托托（酷安）：iPhone 16的电池容量</li>
-                <li class="text-muted">三两老友（酷安）：iPhone 17的电池容量</li>
-                <li class="text-muted">流忍似火（酷安）：iPhone 17 Pro Max的电池容量</li>
-                <li class="text-muted">一只咕咕酱（酷安）：iPhone Air的电池容量</li>
+                <li class="text-muted">黑夜丶（酷安）：iPhone 16 Pro的电池容量信息</li>
+                <li class="text-muted">铁盒的序已变成了日記（酷安）：iPhone 16 Pro Max的电池容量信息</li>
+                <li class="text-muted">寻南觅北（酷安）：iPad mini (A17 Pro)的电池容量信息</li>
+                <li class="text-muted">骑上我心爱的小托托（酷安）：iPhone 16的电池容量信息</li>
+                <li class="text-muted">三两老友（酷安）：iPhone 17的电池容量信息</li>
+                <li class="text-muted">流忍似火（酷安）：iPhone 17 Pro Max的电池容量信息</li>
+                <li class="text-muted">一只咕咕酱（酷安）：iPhone Air的电池容量信息</li>
+                <li class="text-muted">IMCDD（酷安）：iPhone 17 Pro的电池容量信息</li>
+                <li class="text-muted">IMCDD（酷安）：iPad Pro 11-inch (M5)的电池容量信息</li>
             </ul>
         </section>
 
